--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -149,7 +149,7 @@
         <!-- Tab Buttons -->
         <div class="sticky top-0 z-10 bg-white flex border-b border-gray-200 mb-6 shadow-sm">
             <button id="playersTabBtn" class="tab-button active flex-1 py-4 px-4 text-center text-lg font-medium text-gray-600 hover:text-blue-500 transition-colors duration-200 focus:outline-none">
-                Players <span id="playerCount" class="bg-gray-200 text-gray-700 text-sm font-bold ml-2 px-2 py-1 rounded-full">0</span>
+                <span id="playerCount" class="bg-gray-200 text-gray-700 text-sm font-bold ml-2 px-2 py-1 rounded-full">0</span> Players
             </button>
             <button id="scheduleTabBtn" class="tab-button flex-1 py-4 px-4 text-center text-lg font-medium text-gray-600 hover:text-blue-500 transition-colors duration-200 focus:outline-none">
                 Schedule
