--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -190,9 +190,14 @@
                 </div>
 
                 <!-- CSV Upload Section -->
-                <h2 class="text-2xl font-semibold mb-4 text-gray-700 mt-6">Import Players from CSV</h2>
-                <div class="flex flex-row gap-4 mb-4 items-center">
-                    <input type="file" id="csvFileInput" accept=".csv" class="block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100">
+                <div class="hidden lg:block">
+                    <h2 class="text-2xl font-semibold mb-4 text-gray-700 mt-6">Import Players from CSV (desktop only)</h2>
+                    <span class="text-xs">install <a href="https://chromewebstore.google.com/detail/fhcpmkmedhoioppkfiinpccgplckjgig?utm_source=item-share-cb" target="_blank" class="underline text-blue-600 hover:text-blue-800 visited:text-purple-600">Export WhatsApp Polls</a> on your browser to enable CSV Download in
+                        <a href="https://web.whatsapp.com/" target="_blank" class="underline text-blue-600 hover:text-blue-800 visited:text-purple-600">https://web.whatsapp.com/</a>
+                        then export the poll and import here</span>
+                    <div class="flex flex-row gap-4 mb-4 items-center">
+                        <input type="file" id="csvFileInput" accept=".csv" class="block w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100">
+                    </div>
                 </div>
             </div>
 
